Refactoring file structure

--- a/documentation/documentation.tex
+++ b/documentation/documentation.tex
@@ -62,7 +62,7 @@ Koristimo stratifikovano uzorkovanje sa pilot fazom i Neymanov metod raspodele o
 \noindent Rezultati su primenljivi u realnim uslovima i lako se prilagođavaju drugim lokacijama, rezolucijama i opterećenjima scene.
 \newline
 \newline
-\noindent Napomena da metod ima ograničenja, jer tačnost zavisi od kvaliteta ulaznih snimaka (osvetljenje, senke, refleksije, zaklanjanja), kao i od stabilnosti veze između vizuelnih signala i stvarne prisutnosti ljudi.
+\noindent Napomena da metod ima ograničenja, jer tačnost zavisi od kvaliteta ulaznih snimaka (osvetljenje, senke, refleksije, zaklanjanja), kao i od stabilnosti veze između vizuelnih signala i stvarne prisutnosti ljudi. Dodatno ograničenje je to što se u ovom pristupu prebrojavaju samo upaljeni blicevi, dok je stvarni broj ljudi sigurno veći od broja registrovanih bliceva.
 
 
 
