Documentation for results

--- a/documentation/documentation.tex
+++ b/documentation/documentation.tex
@@ -734,8 +734,9 @@ Slika & $\hat T$ & SE & CI donja & CI gornja \\
 \label{tab:results}
 \end{table}
 
-... sta znaci ..
+Dobijeni rezultati ukazuju da je ukupna procena broja ljudi na osnovu registrovanih bliceva na posmatranim lokacijama iznosila približno 170.405, uz standardnu grešku od 894 i 95\% interval poverenja $[168.653, 172.156]$. Vidimo da najveći doprinos ukupnoj proceni daje područje Slavije (oko 57.470 ljudi) i ulice Beogradske (oko 41.056 ljudi), što je i očekivano s obzirom na prostorni raspored i gustinu okupljenih. Ostale lokacije, poput Nemanjine ili Makenzijeve, imale su značajno manji, ali ne zanemarljiv doprinos, dok su ulice poput Prote Mateje imale vrlo mali broj učesnika u poređenju sa centralnim čvorištima.
 
+\newpage
 \section{Zaključak}
 Na protestu održanom 15. marta 2025. godine u Beogradu, prema proceni Arhiva javnih skupova, prisustvovalo je između 275.000 i 325.000 ljudi, uz mogućnost da je taj broj bio i veći. \cite{n1protest15za15}
 . Ovaj skup je bio jedan od najvećih u novijoj istoriji Srbije, nadmašujući prethodne proteste po broju učesnika. Međutim, Ministarstvo unutrašnjih poslova Republike Srbije je procenilo da je broj učesnika bio oko 107.000 \cite{insajder_mup_15za15}, što je značajno niže od nezavisnih procena.
